fixed spacing

--- a/apps/gym/src/app/(user)/weight/Weight.module.css
+++ b/apps/gym/src/app/(user)/weight/Weight.module.css
@@ -21,3 +21,10 @@
   top: 20px;
   left: 10px;
 }
+
+@media (width < 480px) {
+  .body {
+    justify-content: unset;
+    gap: 16px;
+  }
+}
